--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: test-app
-        image: matteocucchi/test-app:1.0
+        image: matteocucchi/test-app:latest
         ports:
         - containerPort: 5000
